Don't need bracketed paste (and it messes things up)

--- a/readline/.inputrc
+++ b/readline/.inputrc
@@ -2,4 +2,4 @@ set editing-mode vi
 
 set blink-matching-paren on
 set colored-stats on
-set enable-bracketed-paste on
+set enable-bracketed-paste off
