--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,14 +1,13 @@
 [alias]
-    ec = config --global -e
-    ci = commit
     co = checkout
-    st = status -s
-    le = log --oneline --decorate
-    show-graph = log --oneline --decorate --all --graph
-    lg2 = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
-    glog = log --all --pretty='format:%d%Cgreen%h%Creset %an - %s' --graph
-    count-changes = !git status -s | wc -l
     d = diff --word-diff
+    ec = config --local -e
+    egc = config --global -e
+    # glog = log --all --graph --pretty='format:%d%Cgreen%h%Creset %an - %s'
+    # le = log --decorate --oneline
+    # lg2 = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
+    graph = log --all --graph --decorate --abbrev-commit --oneline
+    st = status -s
 [apply]
     whitespace = fix
 [color]
@@ -27,16 +26,14 @@
     old = red bold
     new = green
     plain = white
-[color "forward"]
-    status = bold
 [color "status"]
     added = yellow
     changed = green
     untracked = cyan
 [core]
-    editor = vim
+    editor = nvim
     legacyheaders = false
-	excludesfile = /Users/wolf/.gitignore_global
+    excludesfile = ~/.gitignore_global
     whitespace = trailing-space,space-before-tab,cr-at-eol
 [diff]
     renames = copy
@@ -45,9 +42,6 @@
     renamelimit = 1428
 [difftool]
     prompt = false
-[gui]
-    fontdiff = -family \"Bitstream Vera Sans Mono\" -size 13 -weight normal -slant roman -underline 0 -overstrike 0
-    fontui = -family \"Bitstream Vera Sans Mono\" -size 13 -weight normal -slant roman -underline 0 -overstrike 0
 [help]
     autocorrect = 20
 [merge]
@@ -55,8 +49,10 @@
     conflictstyle = diff3
 [mergetool]
     prompt = false
+[pull]
+    rebase = true
 [push]
-    default = current
+    default = nothing
 [repack]
     usedeltabaseoffset = true
 [rerere]
@@ -64,9 +60,3 @@
 [user]
     name = Wolf
     email = wolf@zv.cx
-[difftool "sourcetree"]
-	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-	path = 
-[mergetool "sourcetree"]
-	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
-	trustExitCode = true
