--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -7,6 +7,7 @@
     # le = log --decorate --oneline
     # lg2 = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
     graph = log --all --graph --decorate --abbrev-commit --oneline
+    l = log --decorate --abbrev-commit --oneline
     st = status -s
 [apply]
     whitespace = fix
