Set the default branch name for new repos
at least in Git 2.28.0 or later

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -67,4 +67,11 @@
     enabled = true
 [user]
     name = Wolf
-    email = wolf@zv.cx
+    email = Wolf@learninga-z.com
+[filter "lfs"]
+    clean = git-lfs clean -- %f
+    smudge = git-lfs smudge -- %f
+    process = git-lfs filter-process
+    required = true
+[init]
+    defaultBranch = main
