--- a/vim/.ideavimrc
+++ b/vim/.ideavimrc
@@ -10,4 +10,4 @@ set clipboard+=ideaput
 nnoremap <silent> <C-l> :action EditorToggleShowWhitespaces<cr>
 
 nnoremap [m :action MethodUp<cr>
-nnoremap ]m :action MethodDown<cr
+nnoremap ]m :action MethodDown<cr>
