Make git's diff a little smarter

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -38,6 +38,7 @@
     editor = nvim
     legacyheaders = false
     excludesfile = ~/.gitignore_global
+    attributesfile = ~/.gitattributes_global
     whitespace = trailing-space,space-before-tab,cr-at-eol
 [diff]
     renames = copy
