--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -35,7 +35,7 @@
     changed = green
     untracked = cyan
 [core]
-    editor = nvim
+    editor = vim
     legacyheaders = false
     excludesfile = ~/.gitignore_global
     attributesfile = ~/.gitattributes_global
