Allow space-key to be my leader in IDEA (for easymotion)
...but boy is easymotion strange inside IDEA.

--- a/vim/.ideavimrc
+++ b/vim/.ideavimrc
@@ -1,5 +1,8 @@
 source ~/.vimrc
 
+let mapleader = "\<space>"
+set easymotion
+
 set clipboard+=ideaput
 
 nnoremap <silent> <C-l> :action EditorToggleShowWhitespaces<cr>
