Tmux no longer requires reattach-to-user-namespace

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,7 +5,7 @@ set -g prefix C-s
 bind C-s send-prefix
 
 set -g default-shell $SHELL
-#set -g default-command "reattach-to-user-namespace -l $SHELL"
+set -g default-terminal "screen-256color"
 
 set -sg escape-time 1
 set -g base-index 1
@@ -27,9 +27,6 @@ set -g visual-activity on
 setw -g mouse on
 
 bind S setw synchronize-panes
-
-#bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-#bind C-v run "tmux set-buffer \"$(reattach-to-user-namespace pbpaste)\"; tmux paste-buffer"
 
 bind | split-window -h
 bind - split-window -v
