--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -8,7 +8,8 @@
     l = log --decorate --abbrev-commit --oneline
     l8 = log --decorate --abbrev-commit --oneline -8
     lg = log --pretty=format:'%C(yellow)%h%Creset %C(red)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
-    st = status -s
+    st = status
+    s = status -s
     n = ! git status -s | wc -l
     unstage = restore --staged
     aliases = ! git config --list | grep alias
