--- a/vim/.ideavimrc
+++ b/vim/.ideavimrc
@@ -1,12 +1,12 @@
 source ~/.vimrc
 
-let mapleader = "\<space>"
+let mapleader = "\<Space>"
 set easymotion
 set sneak
 
 set clipboard+=ideaput
 
-nnoremap <silent> <C-l> :action EditorToggleShowWhitespaces<cr>
+nnoremap <silent> <C-l> :action EditorToggleShowWhitespaces<CR>
 
-nnoremap [m :action MethodUp<cr>
-nnoremap ]m :action MethodDown<cr>
+nnoremap [m :action MethodUp<CR>
+nnoremap ]m :action MethodDown<CR>
