--- a/vim/.ideavimrc
+++ b/vim/.ideavimrc
@@ -3,11 +3,26 @@ source ~/.vimrc
 let mapleader = "\<Space>"
 set easymotion
 set sneak
-set multiple-cursors
 
 set clipboard+=ideaput
 
-nnoremap <silent> <C-l> :action EditorToggleShowWhitespaces<CR>
+nmap <silent> <C-l> :action EditorToggleShowWhitespaces<CR>
 
-nnoremap [m :action MethodUp<CR>
-nnoremap ]m :action MethodDown<CR>
+nmap [m :action MethodUp<CR>
+nmap ]m :action MethodDown<CR>
+
+set multiple-cursors
+
+nmap <C-n> <Plug>NextWholeOccurrence
+xmap <C-n> <Plug>NextWholeOccurrence
+nmap g<C-n> <Plug>NextOccurrence
+xmap g<C-n> <Plug>NextOccurrence
+nmap <C-x> <Plug>SkipOccurrence
+xmap <C-x> <Plug>SkipOccurrence
+nmap <C-p> <Plug>RemoveOccurrence
+xmap <C-p> <Plug>RemoveOccurrence
+
+nmap <S-C-n> <Plug>AllWholeOccurrances
+xmap <S-C-n> <Plug>AllWholeOccurrances
+nmap g<S-C-n> <Plug>AllOccurrances
+xmap g<S-C-n> <Plug>AllOccurrances
