--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -2,7 +2,7 @@
     co = checkout
     ci = commit
     br = branch
-    d = diff --word-diff
+    d = diff --word-diff=color
     ec = config --local --edit
     egc = config --global --edit
     l = log --decorate --abbrev-commit --oneline
