--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,40 +1,38 @@
 # .tmux.conf
 
-unbind C-b
-set -g prefix C-s
-bind C-s send-prefix
+unbind-key C-b
+set-option -g prefix C-s
+bind-key C-s send-prefix
+set-option -g prefix2 C-a
+bind-key C-a send-prefix -2
 
 set -g default-shell $SHELL
 set -g default-terminal "screen-256color"
 
-set -sg escape-time 1
-set -g base-index 1
-setw -g pane-base-index 1
+bind-key r source-file ~/.tmux.conf
 
-bind r source-file ~/.tmux.conf
+bind-key | split-window -h
+bind-key - split-window -v
 
-set -g history-limit 1000000
+set-option -g default-shell $SHELL
 
-set-window-option -g mode-keys vi
+set-option -sg escape-time 1
+set-option -g base-index 1
+set-option -g pane-base-index 1
+set-option -g display-time 5000
 
-set -g status-style bg=green,fg=black
-setw -g window-status-current-style bg=yellow,fg=black
-set -g pane-active-border-style fg=white,bg=green
+set-option -g history-limit 50000
 
-setw -g monitor-activity on
-set -g visual-activity on
+set-option -g mode-keys vi
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi V send -X select-line
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel pbcopy
 
-setw -g mouse on
+set-option -g status-style fg=white,bg=green
+set-option -g window-status-current-style fg=white,bg=red
+set-option -g pane-active-border-style fg=white,bg=green
 
-bind S setw synchronize-panes
+set-option -g monitor-activity on
+set-option -g visual-activity on
 
-bind | split-window -h
-bind - split-window -v
-
-bind m \
-    set -g mouse on \;\
-    display 'Mouse: ON'
-
-bind M \
-    set -g mouse off \;\
-    display 'Mouse: OFF'
+set-option -g mouse on
