tmux default-terminal should be set

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,6 +14,7 @@ bind-key r source-file ~/.tmux.conf
 bind-key | split-window -h
 bind-key - split-window -v
 
+set-option -g default-terminal tmux-256color
 set-option -g default-shell $SHELL
 
 set-option -sg escape-time 1
