New .tmux.conf with all I've learned
Ready for my MUG presentation.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,36 +1,54 @@
-# .tmux.conf
+set-option -g prefix C-a        # Let's use Control-a instead of tmux's default Control-b
+bind-key C-a send-prefix        # What to do if, after typing C-a, we type it again
+unbind-key C-b                  # Now we don't need C-b anymore
 
-unbind-key C-b
-set-option -g prefix C-s
-bind-key C-s send-prefix
-set-option -g prefix2 C-a
-bind-key C-a send-prefix -2
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
-bind-key r source-file ~/.tmux.conf
+bind-key | split-window -h -c "#{pane_current_path}"
+bind-key - split-window -v -c "#{pane_current_path}"
 
-bind-key | split-window -h
-bind-key - split-window -v
-
-set-option -g default-terminal tmux-256color
-set-option -g default-shell $SHELL
-
-set-option -sg escape-time 1
 set-option -g base-index 1
 set-option -g pane-base-index 1
-set-option -g display-time 5000
 
-set-option -g history-limit 50000
+set-option -g status-keys vi
+set-option -g window-status-current-style fg=white,bg=red
+set-option -g status-left-length 40
+set-option -g status-right "#{host_short}"
+set-option -ga status-right "#{?pane_in_mode, [#{pane_mode}],}"
+
+%if "#{==:#{host},ubuntu}"
+    set-option -g status-style fg=white,bg=blue
+%else
+    set-option -g status-style fg=white,bg=green
+%endif
+
+if-shell "[$(uname) == Darwin]" {
+    bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel pbcopy
+}
 
 set-option -g mode-keys vi
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi V send -X select-line
-bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel pbcopy
+bind-key -T copy-mode-vi y send -X copy-selection-and-cancel
 
-set-option -g status-style fg=white,bg=green
-set-option -g window-status-current-style fg=white,bg=red
 set-option -g pane-active-border-style fg=white,bg=green
+set-option -g message-command-style fg=black,bg=colour226
+set-option -g message-style fg=black,bg=colour226
+
+
+
 
 set-option -g monitor-activity on
 set-option -g visual-activity on
 
-set-option -g mouse on
+set-option -g mouse off
+bind-key M set-option -g mouse on \; display-message "mouse ON"
+bind-key m set-option -g mouse off \; display-message "mouse OFF"
+
+set-option -g history-limit 50000
+set-option -g display-time 2500
+
+set-option -g default-terminal screen-256color
+set-option -g default-shell $SHELL
+
+set-option -g escape-time 1
