Start with mouse on for tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -41,7 +41,7 @@ set-option -g message-style fg=black,bg=colour226
 set-option -g monitor-activity on
 set-option -g visual-activity on
 
-set-option -g mouse off
+set-option -g mouse on
 bind-key M set-option -g mouse on \; display-message "mouse ON"
 bind-key m set-option -g mouse off \; display-message "mouse OFF"
 
