Use $ for the prompt instead of >.  I missed $

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,7 +1,8 @@
 add_newline = true
 
 [character]
-error_symbol = "[✗](bold red) "
+success_symbol = "[\\$](bold)"
+error_symbol = "[\\$](bold red) "
 
 [directory]
 truncation_length = 8
