Sort keys, add relative line numbering, true colors

--- a/helix/dot-config/helix/config.toml
+++ b/helix/dot-config/helix/config.toml
@@ -1,11 +1,12 @@
 theme = "papercolor-wolf"
 
 [editor]
-true-color = true
 bufferline = "multiple"
+line-number = "relative"
 rulers = [88, 120]
 scrolloff = 3
 shell = ["bash", "-c"]
+true-color = true
 
 [editor.cursor-shape]
 insert = "bar"
