--- a/helix/dot-config/helix/config.toml
+++ b/helix/dot-config/helix/config.toml
@@ -8,6 +8,9 @@ scrolloff = 3
 shell = ["bash", "-c"]
 true-color = true
 
+[editor.soft-wrap]
+enable = true
+
 [editor.cursor-shape]
 insert = "bar"
 normal = "block"
