For Git: use Genomenon email address within Genomenon repos

--- a/git/dot-config/git/config
+++ b/git/dot-config/git/config
@@ -98,3 +98,5 @@
     templatedir = ~/.config/git/template
 [blame]
 	ignoreRevsFile = .git-blame-ignore-revs
+[includeIf "gitdir:~/Genomenon/"]
+    path = ~/.config/git/config-Genomenon
