.gitconfig: email addres can't be genomenon.com; let's only look for an ignoreRevsFile from a local config

--- a/git/dot-config/git/config
+++ b/git/dot-config/git/config
@@ -90,7 +90,7 @@
     enabled = true
 [user]
     name = Wolf
-    email = Wolf@genomenon.com
+    email = Wolf@zv.cx
 [filter "lfs"]
     clean = git-lfs clean -- %f
     smudge = git-lfs smudge -- %f
@@ -99,5 +99,3 @@
 [init]
     defaultBranch = main
     templatedir = ~/.config/git/template
-[blame]
-    ignoreRevsFile = .git-blame-ignore-revs
