When adding or restoring interactively, just hit the key -- no enter needed

--- a/git/dot-config/git/config
+++ b/git/dot-config/git/config
@@ -75,6 +75,7 @@
     autocorrect = 20
 [interactive]
     diffFilter = delta --color-only --features=interactive
+    singleKey = true
 [merge]
     tool = fugitive
     conflictstyle = zdiff3
