--- a/git/dot-config/git/config
+++ b/git/dot-config/git/config
@@ -65,6 +65,7 @@
     colorMoved = default
     renames = copy
     mnemonicprefix = true
+    noprefix = true
     tool = mvimdiff
     renamelimit = 1428
 [difftool]
@@ -89,11 +90,15 @@
     rebase = merges
 [push]
     default = nothing
-	autoSetupRemote = true
+    autoSetupRemote = true
+[rebase]
+    autoStash = true
 [repack]
     usedeltabaseoffset = true
 [rerere]
     enabled = true
+[stash]
+    showPath = true
 [user]
     name = Wolf
     email = Wolf@zv.cx
