Revert Trying difftastic

--- a/git/dot-config/git/config
+++ b/git/dot-config/git/config
@@ -66,13 +66,10 @@
     renames = copy
     mnemonicprefix = true
     noprefix = true
-    tool = difftastic
-    external = difft
+    tool = mvimdiff
     renamelimit = 1428
 [difftool]
     prompt = false
-[difftool "difftastic"]
-    cmd = difft "$LOCAL" "$REMOTE" 
 [fetch]
     prune = true
 [help]
@@ -89,8 +86,6 @@
     prompt = false
 [mergetool "fugitive"]
     cmd = vim -f -c "Gdiff" "$MERGED"
-[pager]
-    difftool = true 
 [pull]
     rebase = merges
 [push]
