--- a/starship/dot-config/starship.toml
+++ b/starship/dot-config/starship.toml
@@ -2,6 +2,7 @@ command_timeout = 2000
 add_newline = true
 
 format = """
+${custom.readline} \
 $username\
 $directory\
 $git_branch\
@@ -34,6 +35,11 @@ up_to_date = "="
 [username]
 style_user = "bold blue"
 format = "[$user]($style)@"
+
+[custom.readline]
+command = "echo $READLINE_EDIT_MODE"
+format = "[$output](bold red)"
+when = true
 
 #
 # Modules I don't care about
