Add Python module to the Starship prompt
Don't remove Conda.  May need to do work to resolve this later.  Also,
remove all the "by-hand" disabling of other modules.  I now specify
modules to use in the single `format` string at the top of the file.  I
don't need to list individual modules anymore.

--- a/starship/dot-config/starship.toml
+++ b/starship/dot-config/starship.toml
@@ -8,6 +8,7 @@ $directory\
 $git_branch\
 $git_status\
 $conda\
+$python\
 $rust\
 \n\
 $character
@@ -40,145 +41,3 @@ format = "[$user]($style)@"
 command = "echo $READLINE_EDIT_MODE"
 format = "[$output](bold red)"
 when = true
-
-#
-# Modules I don't care about
-#
-
-[aws]
-disabled = true
-
-[azure]
-disabled = true
-
-[battery]
-disabled = true
-
-[cmake]
-disabled = true
-
-[cobol]
-disabled = true
-
-[cmd_duration]
-disabled = true
-
-[conda]
-disabled = false
-
-[crystal]
-disabled = true
-
-[dart]
-disabled = true
-
-[deno]
-disabled = true
-
-[dotnet]
-disabled = true
-
-[elixir]
-disabled = true
-
-[elm]
-disabled = true
-
-[env_var]
-disabled = true
-
-[erlang]
-disabled = true
-
-[fill]
-disabled = true
-
-[gcloud]
-disabled = true
-
-[golang]
-disabled = true
-
-[helm]
-disabled = true
-
-[java]
-disabled = true
-
-[julia]
-disabled = true
-
-[kotlin]
-disabled = true
-
-[kubernetes]
-disabled = true
-
-[lua]
-disabled = true
-
-[memory_usage]
-disabled = true
-
-[hg_branch]
-disabled = true
-
-[nim]
-disabled = true
-
-[nix_shell]
-disabled = true
-
-[nodejs]
-disabled = true
-
-[ocaml]
-disabled = true
-
-[openstack]
-disabled = true
-
-[package]
-disabled = true
-
-[perl]
-disabled = true
-
-[pulumi]
-disabled = true
-
-[purescript]
-disabled = true
-
-[rlang]
-disabled = true
-
-[red]
-disabled = true
-
-[ruby]
-disabled = true
-
-[rust]
-disabled = false
-
-[scala]
-disabled = true
-
-[shlvl]
-disabled = true
-
-[singularity]
-disabled = true
-
-[terraform]
-disabled = true
-
-[vlang]
-disabled = true
-
-[vcsh]
-disabled = true
-
-[zig]
-disabled = true
