Moved SILOC development to a Dev Drive, now D: (Windows only)
* git config had to be updated to know about repos moving to D:
* $CDPATH had to be updated to know where the repos now live
* because I might be on C: or D: I made D: show up in my Starship prompt
* ...and that meant writing a function: drive_label

--- a/starship/dot-config/starship.toml
+++ b/starship/dot-config/starship.toml
@@ -3,6 +3,7 @@ add_newline = true
 
 format = """
 ${custom.readline} \
+${custom.drive_label}\
 $username\
 $directory\
 $git_branch\
@@ -21,6 +22,7 @@ error_symbol = "[\\$](bold red)"
 [directory]
 truncation_length = 8
 truncate_to_repo = true
+use_os_path_sep = false
 
 [git_state]
 style = "bold blue"
@@ -41,3 +43,8 @@ format = "[$user]($style)@"
 command = "echo $READLINE_EDIT_MODE"
 format = "[$output](bold red)"
 when = true
+
+[custom.drive_label]
+format = "[($output )](bold fg:40)"
+command = "drive_label"
+when = "[[ $(platform) == 'mingw' && -n $(command -v drive_label >/dev/null 2>&1 && drive_label) ]]"
