Use the Python logo instead of the snake in Starship prompt

--- a/starship/dot-config/starship.toml
+++ b/starship/dot-config/starship.toml
@@ -39,6 +39,9 @@ up_to_date = "="
 style_user = "bold blue"
 format = "[$user]($style)@"
 
+[python]
+symbol = " "
+
 [custom.readline]
 command = "echo $READLINE_EDIT_MODE"
 format = "[$output](bold red)"
