Oops.  Messed up languages.toml

--- a/helix/dot-config/helix/languages.toml
+++ b/helix/dot-config/helix/languages.toml
@@ -2,6 +2,7 @@
 command = "rust-analyzer"
 
 [[language]]
+name = "rust"
 language-servers = [ { name = "rust-analyzer" } ]
 
 [language-server.python-lsp]
