for Helix, add a language server and formatter for Markdown

--- a/helix/dot-config/helix/languages.toml
+++ b/helix/dot-config/helix/languages.toml
@@ -11,3 +11,11 @@ command = "pyright"
 [[language]]
 name = "python"
 language-servers = [ { name = "pyright" } ]
+
+[language-server.markdown-lsp]
+command = "marksman"
+
+[[language]]
+name = "markdown"
+language-servers = [ { name = "marksman" } ]
+formatter = { command = "dprint", args = ["fmt", "--stdin", "md"] }
