I think I have to do this to enable Clippy when checking Rust in Helix

--- a/helix/dot-config/helix/languages.toml
+++ b/helix/dot-config/helix/languages.toml
@@ -5,6 +5,9 @@ command = "rust-analyzer"
 name = "rust"
 language-servers = [ { name = "rust-analyzer" } ]
 
+[language-server.rust-analyzer.config]
+check.command = "clippy"
+
 [language-server.python-lsp]
 command = "pyright"
 
